--- a/app/templates/progress.html
+++ b/app/templates/progress.html
@@ -6,7 +6,7 @@
     <div class="col-lg-12">
       <h1 class="display-4">Hero Progress</h1>
       <hr>
-      <p class="instructions">Account progress by rarity, element and maxed heroes. Based on Star Level and Medals in <a href="{{ url_for('heroSetup', username=current_user.username) }}">Hero Setup</a>.</p>
+      <p class="instructions">Progress by rarity, element and maxed heroes. Based on Star Level and Medals in <a href="{{ url_for('heroSetup', username=current_user.username) }}">Hero Setup</a>.</p>
         <hr>
     </div>
   </div>
@@ -226,5 +226,5 @@
   </table>
     </div>
   </div>
-
+<br>
 {% endblock %}
