--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -86,7 +86,7 @@
       </li>
         {% endif %}
         <li class="nav-item">
-          <a class="nav-link" href="#">Contact</a>
+          <a class="nav-link" href="{{ url_for('contact') }}">Contact</a>
         </li>
 
       </ul>
