--- a/app/templates/collection.html
+++ b/app/templates/collection.html
@@ -16,7 +16,9 @@ $(document).ready(function() {
 	language: {
         search: "Filter: ",
         searchPlaceholder: "search..",
-        "info": ""
+        "emptyTable": "It seems you haven't input any hero data.",
+        "info": "",
+        "infoEmpty": ""
     }
 } );
 } );
@@ -28,7 +30,10 @@ $(document).ready(function() {
 	searching: false,
 	"orderClasses": false,
 	language: {
-        "info": ""
+	    "emptyTable": "You have collected all heroes, well done!",
+        "info": "",
+        "infoEmpty": "",
+
     }
 } );
 } );
@@ -39,7 +44,7 @@ $(document).ready(function() {
     <div class="col-lg-12">
       <h1 class="display-4">Hero Collection</h1>
       <hr>
-      <p class="instructions">Sort and filter your heroes below. Click on any hero to see even more details. Your heroes can be input in the <a href="{{ url_for('heroSetup', username=current_user.username) }}">Hero Setup</a>.</p>
+      <p class="instructions">Sort and filter your heroes below. Click on any hero to see more details. Your heroes can be input in the <a href="{{ url_for('heroSetup', username=current_user.username) }}">Hero Setup</a>.</p>
         <hr>
     </div>
  </div>
