--- a/app/templates/heroSetup.html
+++ b/app/templates/heroSetup.html
@@ -72,7 +72,7 @@
           <th>&nbsp;</th>
           <th class="text-center WaterHead"><img src="{{ url_for('static', filename='star.png') }}" width="25" alt="Star Level"></th>
           <th class="text-center WaterHead"><img src="{{ url_for('static', filename='awaken.png') }}" width="25" alt="Awaken"></th>
-          <th class="text-center WaterHead"><img src="{{ url_for('static', filename='wpn.png') }}" width="25" alt="Weapon Level"></th>
+          <th class="text-center WaterHead">WPN</th>
           <th class="text-center WaterHead"><img src="{{ url_for('static', filename='medal.png') }}" width="25" alt="Medals"></th>
         </tr>
         </thead>
@@ -122,7 +122,7 @@
           <th>&nbsp;</th>
           <th class="text-center FireHead"><img src="{{ url_for('static', filename='star.png') }}" width="25" alt="Star Level"></th>
           <th class="text-center FireHead"><img src="{{ url_for('static', filename='awaken.png') }}" width="25" alt="Awaken"></th>
-          <th class="text-center FireHead"><img src="{{ url_for('static', filename='wpn.png') }}" width="25" alt="Weapon Level"></th>
+          <th class="text-center FireHead">WPN</th>
           <th class="text-center FireHead"><img src="{{ url_for('static', filename='medal.png') }}" width="25" alt="Medals"></th>
         </tr>
         </thead>
@@ -174,7 +174,7 @@
           <th>&nbsp;</th>
           <th class="text-center EarthHead"><img src="{{ url_for('static', filename='star.png') }}" width="25" alt="Star Level"></th>
           <th class="text-center EarthHead"><img src="{{ url_for('static', filename='awaken.png') }}" width="25" alt="Awaken"></th>
-          <th class="text-center EarthHead"><img src="{{ url_for('static', filename='wpn.png') }}" width="25" alt="Weapon Level"></th>
+          <th class="text-center EarthHead">WPN</th>
           <th class="text-center EarthHead"><img src="{{ url_for('static', filename='medal.png') }}" width="25" alt="Medals"></th>
         </tr>
         </thead>
@@ -224,7 +224,7 @@
           <th>&nbsp;</th>
           <th class="text-center LightHead"><img src="{{ url_for('static', filename='star.png') }}" width="25" alt="Star Level"></th>
           <th class="text-center LightHead"><img src="{{ url_for('static', filename='awaken.png') }}" width="25" alt="Awaken"></th>
-          <th class="text-center LightHead"><img src="{{ url_for('static', filename='wpn.png') }}" width="25" alt="Weapon Level"></th>
+          <th class="text-center LightHead">WPN</th>
           <th class="text-center LightHead"><img src="{{ url_for('static', filename='medal.png') }}" width="25" alt="Medals"></th>
         </tr>
         </thead>
@@ -284,7 +284,7 @@
           <th>&nbsp;</th>
           <th class="text-center DarkHead"><img src="{{ url_for('static', filename='star.png') }}" width="25" alt="Star Level"></th>
           <th class="text-center DarkHead"><img src="{{ url_for('static', filename='awaken.png') }}" width="25" alt="Awaken"></th>
-          <th class="text-center DarkHead"><img src="{{ url_for('static', filename='wpn.png') }}" width="25" alt="Weapon Level"></th>
+          <th class="text-center DarkHead">WPN</th>
           <th class="text-center DarkHead"><img src="{{ url_for('static', filename='medal.png') }}" width="25" alt="Medals"></th>
         </tr>
         </thead>
